src/main/k8s/config-server-d.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: config-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
      - name: config-server
        image: 391471456712.dkr.ecr.eu-central-1.amazonaws.com/kolov/curriculi-config-server
        imagePullPolicy: Always
        ports:
        - containerPort: 8888
