src/main/k8s/curriculi-fe-d.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: curriculi-fe
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: curriculi-fe
    spec:
      containers:
      - name: curriculi-fe
        image: eu.gcr.io/iconic-setup-91510/curriculi-fe:latest
        ports:
        - containerPort: 80
