src/main/k8s/mongo-w2f2-d.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mongo-w2f2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo-w2f2
    spec:
      volumes:
        - name: mongo
          gcePersistentDisk:
            pdName: where2fly2
            fsType: ext4
      containers:
      - name: mongo
        image: mongo:3.0
        ports:
        - containerPort: 27017
        volumeMounts:
          - name: mongo
            mountPath: /data/db
