src/main/k8s/nginx-d.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: eu.gcr.io/iconic-setup-91510/nginx-curriculi
        ports:
        - containerPort: 80
