src/main/k8s/redis-d.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
        - name: redis
      containers:
      - name: redis
        image: redis:3.0
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
