src/main/k8s/service-docs-d.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service-docs
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service-docs
    spec:
      containers:
      - name: service-docs
        image: eu.gcr.io/iconic-setup-91510/curriculi-service-docs
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
