src/main/k8s/service-users-d.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service-users
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service-users
    spec:
      containers:
      - name: service-users
        image: eu.gcr.io/iconic-setup-91510/curriculi-service-users
        imagePullPolicy: Always
        ports:
        - containerPort: 8501
