src/main/k8s/w2f2-d.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: w2f2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: w2f2
    spec:
      containers:
      - name: w2f2
        image: eu.gcr.io/iconic-setup-91510/w2f2
        ports:
        - containerPort: 3000
