src/main/k8s/app-s.yml
apiVersion: v1
kind: Service
metadata:
  name: curriculi
spec:
  ports:
    - name: curriculi
      port: 8080
      targetPort: 8080
  selector:
    app: curriculi
