src/main/k8s/config-server-s.yml
apiVersion: v1
kind: Service
metadata:
  name: config-server
spec:
  ports:
    - name: http
      port: 8888
      targetPort: 8888
  selector:
    app: config-server
