src/main/k8s/curriculi-fe-s.yml
apiVersion: v1
kind: Service
metadata:
  name: curriculi-fe
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: curriculi-fe
