src/main/k8s/eureka-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: eureka-lb
  labels:
    name: eureka-lb
spec:
  type: NodePort
  ports:
    - port: 8761
      port: 8761
      targetPort: 8761
      nodePort: 30002
  selector:
    app: eureka-server
