src/main/k8s/eureka-s.yml
apiVersion: v1
kind: Service
metadata:
  name: eureka
spec:
  ports:
    - name: http
      port: 8761
      targetPort: 8761
  selector:
    app: eureka
