src/main/k8s/mongo-docs-s.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-docs
spec:
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
  selector:
    app: mongo-docs
