src/main/k8s/mongo-users-s.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-users
spec:
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
  selector:
    app: mongo-users
