src/main/k8s/mongo-w2f2-s.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-w2f2
spec:
  ports:
    - name: mongo-w2f2
      port: 27017
      targetPort: 27017
  selector:
    app: mongo-w2f2
