src/main/k8s/nginx-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb
  labels:
    name: nginx-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
#    - port: 80
#      targetPort: 8080
#  selector:
#    app: curriculi
