src/main/k8s/redis-s.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  selector:
    app: redis
