src/main/k8s/service-docs-s.yml
apiVersion: v1
kind: Service
metadata:
  name: service-docs
spec:
  ports:
    - name: http
      port: 8502
      targetPort: 8502
  selector:
    app: service-docs
