src/main/k8s/service-users-s.yml
apiVersion: v1
kind: Service
metadata:
  name: service-users
spec:
  ports:
    - name: http
      port: 9000
      targetPort: 9000
  selector:
    app: service-users
