src/main/k8s/w2f2-fe-s.yml
apiVersion: v1
kind: Service
metadata:
  name: w2f2-fe
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: w2f2-fe
