src/main/k8s/w2f2-s.yml
apiVersion: v1
kind: Service
metadata:
  name: w2f2
spec:
  type: NodePort
  ports:
    - name: w2f2
      port: 3000
      targetPort: 3000
  selector:
    app: w2f2
